[tool.poetry]
name = "repl_python3_flaskpiplupOwo"
version = "0.1.0"
description = ""
authors = ["AdamHo2 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
jsonify = "^0.5"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
